# Agent-Suite

./: .gitignore  MULTI_AGENT_ARCHITECTURE.md  PRODUCT_ROADMAP.md  README.md  batch_evaluation.py  calculate_metrics.py  check_db.py  clear_db.py  cyber_evaluation.csv  cyber_evaluation_results_clean.csv  debug_query.py  generate_test_audio.py  main.py  phishing_detection.db  pyproject.toml  schema.sql  test.py  test_api.py  test_chat.py  test_coordination_simple.py  test_delay_results.csv  test_linguistic_agent.py  test_retrieval.py  test_social_engineering.py  test_technical_validation.py  test_threat_intel.py  test_voice_chat.py
app/Agents/: README.md  basic_agent.py  coordination_agent.py  email_review_chat_agent.py  fastapi_service.py  linguistic_agent.py  service_runner.py  technical_validation_agent.py  threat_intel_agent.py
app/Helper/: helper_actions.py  helper_aggregation.py  helper_api.py  helper_constant.py  helper_database.py  helper_explainability.py  helper_preprocessing.py  helper_prompt.py  helper_pydantic.py  helper_secret.py
app/LLM/: gemini.py  llm.py
app/ML/: semantic_analysis.py
app/Router/: fastapi_service.py  service_runner.py
app/Tools/: base_tool.py  domain_validator.py  email_analysis.py  technical_validation.py  threat_intel_checker.py  threat_intel_tool.py
