[project]
name = "Agents"
version = "0.1.0"
description = "Agent Suite"
authors = [
    {name = "Kaushal Kumar Subramani", email = "kaushalkmrgr8@gmail.com"}
]
requires-python = "==3.12.0"
dependencies = [
    "asyncio",
    "crewai",
    "datetime",
    "fastapi",
    "google",
    "google-cloud-secret-manager",
    "langchain",
    "langchain-google-genai",
    "langchain_core",
    "langgraph",
    "msgraph-core",
    "nest-asyncio",
    "numpy>=1.24.0",
    "pandas",
    "pinecone-client",
    "pydantic[email]",
    "pytest",
    "python-dotenv",
    "redis",
    "requests",
    "scikit-learn",
    "sentence-transformers>=2.2.0",
    "tenacity",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "tqdm",
    "typing",
    "uuid",
    "uv",
    "uvicorn",
]