[project]
name = "Agents"
version = "0.1.0"
description = "Agent Suite"
authors = [
    {name = "Kaushal Kumar Subramani", email = "kaushalkmrgr8@gmail.com"}
]
requires-python = "==3.12.0"
dependencies = [
    "asyncio",
    "crewai",
    "datetime",
    "fastapi",
    "google",
    "google-cloud-secret-manager",
    "groq>=0.9.0",
    "langchain",
    "langchain-google-genai",
    "langchain-groq>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain_core",
    "langgraph",
    "msgraph-core",
    "nest-asyncio",
    "numpy>=1.24.0",
    "openai>=1.30.0",
    "pandas",
    "pinecone-client",
    "pydantic[email]",
    "pytest",
    "python-dotenv",
    "python-multipart",
    "redis",
    "requests",
    "scikit-learn",
    "sentence-transformers>=2.2.0",
    "tenacity",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "tqdm",
    "typing",
    "uuid",
    "uv",
    "uvicorn",
    "dnspython>=2.8.0",
    "python-whois>=0.9.6",
    "levenshtein>=0.27.3",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
    "openai-whisper>=20231117",
    "ffmpeg-python>=0.2.0",
    "gtts>=2.5.0",
]
